gap correction

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 50px 110px;
+    margin: 50px 110px 0;
     
 }
 .header-title{
@@ -38,7 +38,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 25px;
+    padding: 20px;
 }
 .journey{
     text-align: left;
@@ -56,7 +56,7 @@ a{
     color: var(--primary-color);
     font-size: 16px;
     font-weight: 600;
-    margin-right: 40px;
+    margin-right: 50px;
 }
 .btn-preebook{
     background: #E02C6D;
@@ -81,9 +81,11 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
-    margin-top: 50px;
+    gap: 35px;
+    margin: 0 165px;
     margin-bottom: 100px;
+    /* border: 1px ; */
+    /* border-color: linear-gradient(90deg, rgba(239, 242, 247, 0.712) 0%, rgba(192, 204, 218, o.6) 50.38%, rgba(244, 247, 250, 0.1) 100%); */
 }
 
 /* Third-Section-Styles */
